@@ -21,8 +21,7 @@
  <property name="default_view_fallback">False</property>
  <alias from="(Default)" to="(dynamic view)"/>
  <alias from="edit" to="base_edit"/>
- <alias from="properties" to="base_metadata"/>
- <alias from="sharing" to="folder_localrole_form"/>
+ <alias from="sharing" to="@@sharing"/>
  <alias from="view" to="(selected layout)"/>
  <action title="View" action_id="view" category="object"
     condition_expr="python:1" url_expr="string:${object_url}/view"
@@ -32,11 +31,6 @@
  <action title="Edit" action_id="edit" category="object"
     condition_expr="python:1" url_expr="string:${object_url}/edit"
     visible="True">
-  <permission value="Modify portal content"/>
- </action>
- <action title="Properties" action_id="metadata" category="object"
-    condition_expr="" url_expr="string:${object_url}/base_metadata"
-    visible="False">
   <permission value="Modify portal content"/>
  </action>
  <action title="References" action_id="references" category="object"
