@@ -169,12 +169,5 @@ class PoiPscTracker(PoiTracker):
         return "Issue tracker"
 
 
-def modify_fti(fti):
-    # Hide unnecessary tabs (usability enhancement)
-    for a in fti['actions']:
-        if a['id'] in ['metadata', 'sharing']:
-            a['visible'] = 0
-    return fti
-
 registerType(PoiPscTracker, PROJECTNAME)
 # end of class PoiPscTracker
